# tipe

./: Makefile  pyproject.toml
files/: _config.yml  _toc.yml  intro.md
files/image/: chapter.md
files/image/egalisation_histogramme/: egalisation_histogramme.ipynb
files/image/ray_tracing/: ray.py
files/ml/: chapter.md  kmeans.ipynb  regression_lineaire.ipynb  regression_logistique.ipynb  reseau_neurone.ipynb  svm.ipynb
files/optimisation/tsp/: map.html  tsp.ipynb
